// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`FailureInstancePanelControlTest render FailureInstancePanelControl: create without instance 1`] = `
<React.Fragment>
  <CustomizedActionButton
    ariaDescription="Open add a failure instance panel"
    ariaLabel="Add a failure instance"
    iconProps={
      {
        "iconName": "Add",
      }
    }
    onClick={[Function]}
  >
    Add a failure instance
  </CustomizedActionButton>
  <GenericPanel
    className="failureInstancePanel"
    closeButtonAriaLabel="Close failure instance panel"
    hasCloseButton={true}
    headerText="Add a failure instance"
    isOpen={false}
    onDismiss={[Function]}
  >
    <FlaggedComponent
      enableJSXElement={
        <FailureInstancePanelDetails
          onSelectorChange={[Function]}
          onValidateSelector={[Function]}
          path={null}
          snippet={null}
        />
      }
      featureFlag="manualInstanceDetails"
      featureFlagStoreData={{}}
    />
    <StyledTextFieldBase
      className="observedFailureTextfield"
      label="Comment"
      multiline={true}
      onChange={[Function]}
      placeholder="Comment"
      resizable={false}
      rows={8}
      styles={[Function]}
      value=""
    />
    <div>
      <ActionAndCancelButtonsComponent
        cancelButtonOnClick={[Function]}
        isHidden={false}
        primaryButtonDisabled={true}
        primaryButtonOnClick={[Function]}
        primaryButtonText="Add failed instance"
      />
    </div>
  </GenericPanel>
</React.Fragment>
`;

exports[`FailureInstancePanelControlTest render FailureInstancePanelControl: edit without instance 1`] = `
<React.Fragment>
  <StyledLinkBase
    className="editButton"
    onClick={[Function]}
  >
    <Memo(Icon)
      ariaLabel="edit instance"
      iconName="edit"
    />
  </StyledLinkBase>
  <GenericPanel
    className="failureInstancePanel"
    closeButtonAriaLabel="Close failure instance panel"
    hasCloseButton={true}
    headerText="Edit failure instance"
    isOpen={false}
    onDismiss={[Function]}
  >
    <FlaggedComponent
      enableJSXElement={
        <FailureInstancePanelDetails
          onSelectorChange={[Function]}
          onValidateSelector={[Function]}
          path={null}
          snippet={null}
        />
      }
      featureFlag="manualInstanceDetails"
      featureFlagStoreData={{}}
    />
    <StyledTextFieldBase
      className="observedFailureTextfield"
      label="Comment"
      multiline={true}
      onChange={[Function]}
      placeholder="Comment"
      resizable={false}
      rows={8}
      styles={[Function]}
      value=""
    />
    <div>
      <ActionAndCancelButtonsComponent
        cancelButtonOnClick={[Function]}
        isHidden={false}
        primaryButtonDisabled={true}
        primaryButtonOnClick={[Function]}
        primaryButtonText="Save"
      />
    </div>
  </GenericPanel>
</React.Fragment>
`;

exports[`FailureInstancePanelControlTest render FailureInstancePanelControl: partial original instance 1`] = `
<React.Fragment>
  <CustomizedActionButton
    ariaDescription="Open add a failure instance panel"
    ariaLabel="Add a failure instance"
    iconProps={
      {
        "iconName": "Add",
      }
    }
    onClick={[Function]}
  >
    Add a failure instance
  </CustomizedActionButton>
  <GenericPanel
    className="failureInstancePanel"
    closeButtonAriaLabel="Close failure instance panel"
    hasCloseButton={true}
    headerText="Add a failure instance"
    isOpen={false}
    onDismiss={[Function]}
  >
    <FlaggedComponent
      enableJSXElement={
        <FailureInstancePanelDetails
          onSelectorChange={[Function]}
          onValidateSelector={[Function]}
        />
      }
      featureFlag="manualInstanceDetails"
      featureFlagStoreData={null}
    />
    <StyledTextFieldBase
      className="observedFailureTextfield"
      label="Comment"
      multiline={true}
      onChange={[Function]}
      placeholder="Comment"
      resizable={false}
      rows={8}
      styles={[Function]}
      value="original text"
    />
    <div>
      <ActionAndCancelButtonsComponent
        cancelButtonOnClick={[Function]}
        isHidden={false}
        primaryButtonDisabled={false}
        primaryButtonOnClick={[Function]}
        primaryButtonText="Add failed instance"
      />
    </div>
  </GenericPanel>
</React.Fragment>
`;
